--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-plugin-p5js": "^1.0.0"
+  },
+  "dependencies": {
+    "exercise1": "^1.0.0",
+    "vite": "^5.2.10"
   }
 }
